Strip wrapping HTML tags when importing logs from Kopete

Also disable check whether the logfile already exists in TpLogger and
just overwrite it. This allows users to reimport their Kopete logs

BUG: 318751
FIXED-IN: 0.6.2
Reviewed-By: David Edmundson